infra/k8s/overlays/production/video-storage-processor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor-service
spec:
  template:
    spec:
      volumes:
        - name: video-storage
          persistentVolumeClaim:
            claimName: ${PRODUCTION_VIDEO_STORAGE_CLAIM}
